kendo prevent white-space: nowrap;

--- a/DemoPage/kendodemo.css
+++ b/DemoPage/kendodemo.css
@@ -3,6 +3,6 @@
             text-align: right;
         }
         
-        /*.k-grid .k-alt {
-            background: aliceblue;
-        }*/
+        .k-grid td{
+            white-space: nowrap;
+         }
